--- a/OpenLook/app/templates/base.html
+++ b/OpenLook/app/templates/base.html
@@ -15,7 +15,7 @@ base template from Bootstrap
 
 <!--navigation bar-->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">Naviga</a>
+  <a class="navbar-brand" href="/">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,13 +33,6 @@ base template from Bootstrap
     </ul>
   </div>  
 </nav>
-<!--background image-->
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1>OpenLook App</h1>
-    <p>Prova!</p> 
-  </div>
-</div>
 
 <!--Content: base template with jinja2-->
 
