--- a/OpenLook/app/templates/index.html
+++ b/OpenLook/app/templates/index.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %} {% block title %}Open Look App{% endblock %} {% block body %}
 
+<!--background image-->
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1>OpenLook App</h1>
+      <p>Prova!</p> 
+    </div>
+  </div>
+  
+<!--
 <div class="container">
     <h1>Index</h1>
     <p>Request: {{ req }}</p>
@@ -19,7 +28,7 @@
                 </select>
 
                 <br>
-                <!-- post btn -->
+                
                 <input type="submit" name="action" value="Set" class="btn btn-primary" />
                 <br>
                 <br>
@@ -29,6 +38,7 @@
 
 </form>
 </div>
+-->
 <!-- debug
 <p>selectd {{ local_url_selected }}</p>
 {{ local_urls }}
