--- a/OpenLook/app/static/custom-style.css
+++ b/OpenLook/app/static/custom-style.css
@@ -10,3 +10,8 @@
     background-position: center center;
     background-repeat: no-repeat;
 }
+
+.form-group[type=text] {
+    border-bottom: 1px solid #4dd0e1;
+    box-shadow: 0 1px 0 0 #4dd0e1;
+  }
