--- a/OpenLook/app/templates/index.html
+++ b/OpenLook/app/templates/index.html
@@ -3,11 +3,48 @@
 <!--background image-->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1>OpenLook App</h1>
+      <h1>La collezione OPEN in MLOL</h1><br>
       <p>Prova!</p> 
     </div>
-  </div>
-  
+</div>
+<div class="container">
+    <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+                <h3 class="card-title">SOLR SEARCH</h3>
+                <p class="card-text">Dove è possibile fare delle query complesse direttamente a Solr.</p>
+                <a href="/search" class="btn btn-primary" >Vai</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+                <img src="/static/images/switchboard-operator-big.jpg" class="card-img" alt="Vai alla pagina" >
+          </div>
+        </div>
+    </div>
+</div>
+<!--
+    <div class="card" style="width: 100%;">
+        <div class="row no-gutters">
+            <div class="col">
+                <div class="card-body">
+                    <h3 class="card-title">SOLR SEARCH</h3>
+                    <p class="card-text">Dove è possibile fare delle query complesse direttamente a Solr.</p>
+                </div>             
+            </div>
+            <div class="col-md-auto">
+                <!~~Variable width content~~>
+            </div>
+            <div class="col col-lg-2">
+                <a href="/search">
+                <img src="/static/images/dusky-mirror.jpg" class="card-img" alt="Vai alla pagina" >
+                </a>
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+-->
 <!--
 <div class="container">
     <h1>Index</h1>
