--- a/OpenLook/app/templates/base.html
+++ b/OpenLook/app/templates/base.html
@@ -9,26 +9,31 @@ base template from Bootstrap
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href= {{ url_for('static', filename='custom-style.css') }}> <!--Custom css-->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans+JP:wght@400;700&family=Noto+Sans+KR:wght@400;700&family=Noto+Sans+SC:wght@400;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">  <!-- font-->
 </head>
 <body>
 
-<!--navigation bar-->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="/">Home</a>
+<!--navigation bar -->
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <a class="navbar-brand" href="/">OPEN<br>LookApp!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="search">Solr search</a>
+        <a class="nav-link " href="search">SOLR SEARCH</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled" href="#">AUTHORITY CONTROL</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled" href="#">PUBLISHER</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">COLLEZIONI</a>
       </li>    
     </ul>
   </div>  
@@ -39,8 +44,8 @@ base template from Bootstrap
 {% block body %} {% endblock %}
 
 <!--footer-->
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+<div class="jumbotron text-center footer" style="margin-bottom:0" height="20px">
+  <p>Made with Flask</p>
 </div>
 
 </body>
