--- a/OpenLook/app/templates/index.html
+++ b/OpenLook/app/templates/index.html
@@ -14,11 +14,53 @@
             <div class="card-body">
                 <h3 class="card-title">SOLR SEARCH</h3>
                 <p class="card-text">Dove è possibile fare delle query complesse direttamente a Solr.</p>
-                <a href="/search" class="btn btn-primary" >Vai</a>
+                <a href="/search" class="btn btn-primary" role="button">Vai</a>
             </div>
           </div>
           <div class="col-md-4">
                 <img src="/static/images/switchboard-operator-big.jpg" class="card-img" alt="Vai alla pagina" >
+          </div>
+        </div>
+    </div>
+    <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+                <h3 class="card-title">AUTHORITY CONTROL</h3>
+                <p class="card-text">Dove si fanno operazioni sull'Authority control: Viaf e Wikidata.</p>
+                <a href=" à" class="btn btn-primary disabled" role="button" aria-disabled="true">Still working</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+                <img src="/static/images/compositor.jpg" class="card-img" alt="Vai alla pagina" >
+          </div>
+        </div>
+    </div>
+    <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+                <h3 class="card-title">PUBLISHER</h3>
+                <p class="card-text">Dove si ragiona su publisher e distributori.</p>
+                <a href="#" class="btn btn-primary disabled" role="button" aria-disabled="true">Still working</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+                <img src="/static/images/balloon-advertising.jpg" class="card-img" alt="Vai alla pagina" >
+          </div>
+        </div>
+    </div>
+    <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-8">
+            <div class="card-body">
+                <h3 class="card-title">COLLEZIONI</h3>
+                <p class="card-text">Dove si controllano e compongono le collezioni.</p>
+                <a href="#" class="btn btn-primary disabled" role="button" aria-disabled="true">Still working</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+                <img src="/static/images/train-ghosts-1.jpg" class="card-img" alt="Vai alla pagina" >
           </div>
         </div>
     </div>
