--- a/OpenLook/app/static/custom-style.css
+++ b/OpenLook/app/static/custom-style.css
@@ -40,8 +40,25 @@ body{
 }
 
 .btn-primary{
-    background: rgb(22,36,56);
+    background-color: rgb(22,36,56);
     border-color: rgb(22,36,56);
+}
+
+.btn-primary:hover{
+    background-color: #3C4C62;
+    border-color: #3C4C62;
+}
+
+.btn-primary:focus {
+    color: #fff;
+    background-color: #3C4C62;
+    border-color: #3C4C62;
+    box-shadow: 0 0 0 .2rem rgba(22,36,56,.5);
+}
+
+.btn-primary.disabled{
+    background-color: #243145;
+    border-color: #243145;
 }
 
 /*jumbotronn*/
@@ -80,7 +97,11 @@ body{
 
 /* form */
 
-.form-group[type=text] {
-    border-bottom: 1px solid #4dd0e1;
-    box-shadow: 0 1px 0 0 #4dd0e1;
+.form-control:focus {
+    border-bottom: 1px solid #80bdff;
+    box-shadow: 0 1px 0 0 #80bdff;
+}
+
+.form-control {
+    border-radius: 0px;
 }
