--- a/OpenLook/app/templates/base.html
+++ b/OpenLook/app/templates/base.html
@@ -18,7 +18,7 @@ base template from Bootstrap
 <!--navigation bar -->
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <a class="navbar-brand" href="/">OPEN<br>LookApp!</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
