--- a/OpenLook/app/templates/search.html
+++ b/OpenLook/app/templates/search.html
@@ -1,30 +1,36 @@
 
 {% extends "base.html" %} {% block title %}Open Look App{% endblock %} {% block body %}
 
+<!--search-->
 <div class="container">
     <h1>Ricerca avanzata in Solr</h1>
     <br>
     <p>Scegli i parametri e lancia la ricerca</p>
     <form action="/search" method="POST"> <!-- this is important! -->
         <div class="form-group">
-            <input class="form-control" id="inputdefault" type="text" name="user_input" placeholder="Search..." />
+            <input class="form-control" id="inputdefault" type="text" name="user_input" placeholder="Search..." value="{{ request.form['user_input'] }}"/>
         </div>
         <div class="form-group">
             <div class="row">
                 <div class="col-md-6">
-                    <label for="group-by">Raggruppa per</label>
-                    <select name= "options" class="custom-select" id="group-by">
+                    <label for="group-by">Raggruppa per <em>(opzionale)</em></label>
+                    <select name= "grouping" class="custom-select" id="group-by">
                         <option value="" selected >Scegli un'opzione...</option>
                         <!-- option value must match schema in SolR -->
-                        <option value="publisher" >Publisher</option>
+                        <option value="creator_db_map" >Autore</option>
+                        <option value="collection_db_map" >Collezione</option>
+                        <option value="license_db_map" >Licenza</option>
+                        <option value="language_db_map" >Lingua</option>
+                        <option value="publisher_db_map" >Publisher</option>
+                        <option value="typology" >Tipologia</option>
                     </select>
                 </div>
                 <div class="col-md-6">
-                    <label for="select-col">Seleziona colonne</label>
-                    <select name= "options" class="custom-select" id="select-col">
+                    <label for="select-col">Seleziona colonne <em>(opzionale)</em></label>
+                    <select name= "select" class="custom-select" id="select-col">
                         <option value="" selected >Scegli un'opzione...</option>
                         <!-- option value must match schema in SolR -->
-                        <option value="publisher" >Publisher</option>
+                        <option value="" >Da fare</option>
                     </select>
                 </div>
             </div>
@@ -32,6 +38,27 @@
         <input type="submit" name="action" value="Search" class="btn btn-primary" />
     </form>
 </div>
+<br>
+<!--table-->
+<div class="container">
+    {% if rv %}
+    <div class="alert alert-info" role="alert">
+        Hai cercato: {{ user_input }}
+    </div>
+    {% endif %}
+    <div>{{ data | safe }}</div>
+        <!--<h2>Risultati per la ricerca: {{ data|length }}</h2>
+        <table>
+            <thead><tr><th>Name</th><th>Count</th></tr></thead>
+            <tbody>
+            {% for r in data %}
+            <tr><td>{{ r["publisher"] }}</td><td>{{ r["publisher"]|length }}</td></tr>
+            {% endfor %}
+            </tbody>
+            </table>
+        <br>-->   
+</div>
+
     <!-- vecchio form search
     <form action="/search" method="POST">
         <div class="form-group">
@@ -54,21 +81,4 @@
     </form>
     <br>-->
 
-<div class="container">
-    <div>{{ data | safe }}</div>
-        <!--<h2>Risultati per la ricerca: {{ data|length }}</h2>
-        <table>
-            <thead><tr><th>Name</th><th>Count</th></tr></thead>
-            <tbody>
-            {% for r in data %}
-            <tr><td>{{ r["publisher"] }}</td><td>{{ r["publisher"]|length }}</td></tr>
-            {% endfor %}
-            </tbody>
-            </table>
-        <br>-->   
-</div>
-
-
 {% endblock %}
-
-
