--- a/OpenLook/app/static/custom-style.css
+++ b/OpenLook/app/static/custom-style.css
@@ -86,8 +86,26 @@ body{
 /*cards*/
 .card{
     border-radius: 0px;
+    border-top: 2px, solid, #cd2b00;
+}
+.card:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 0;
+    left: 0;
+    background-color: #cd2b00;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.5s ease-in-out 0s;
 }
 
+.card:hover:after {
+    visibility: visible;
+    transform: scaleX(1);
+}
+  
 
 .card-img{
     max-width: 100%;
