--- a/OpenLook/app/templates/search.html
+++ b/OpenLook/app/templates/search.html
@@ -42,8 +42,7 @@
                 </div>
                 <div class="col-md-6">
                     <label for="select-col">Seleziona colonne <em>(opzionale)</em></label>
-                    <select name= "selection" class="custom-select" id="select-col" multiple>
-                        <option value="" selected >Scegli un'opzione...</option>
+                    <select name= "selection" class="selectpicker" id="select-col" multiple data-live-search="true" title="Scegli un'opzione">
                         <option value="title" >Title</option>
                         <option value="publisher" >Publisher</option>
                         <option value="typology" >Typology</option>
@@ -87,7 +86,11 @@
         <br>-->   
 </div>
 
-
+<script>
+    $(document).ready(function(){
+        $("#select-col").selectpicker();
+    })
+</script>
     <!-- vecchio form search
     <form action="/search" method="POST">
         <div class="form-group">
@@ -109,4 +112,7 @@
         <br>
     </form>
     <br>-->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
 {% endblock %}
