--- a/OpenLook/app/static/custom-style.css
+++ b/OpenLook/app/static/custom-style.css
@@ -6,17 +6,36 @@ body{
 .navbar {
     height: 7rem;
 }
+
 .navbar-light .navbar-nav .nav-link {
     color: #cd2b00;
     /*font-weight: 700;*/
+    
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-    border-bottom: 1px solid #F84718;
+    /*border-bottom: 1px solid #F84718;*/
     color: #F84718;
-    padding-bottom: calc(.5rem - 1px);   
+    padding-bottom: calc(.5rem - 1px);
 }
-  
+
+.navbar-light .navbar-nav .nav-item{ /*https://stackoverflow.com/questions/58939609/bootstrap-4-nav-link-hover-effect*/
+    position: relative;
+}
+
+.navbar-light .navbar-nav .nav-item:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    border-bottom: 2px solid #F84718;
+    transition:  all 0.5s ease-in-out 0s;
+}
+
+.navbar-light .navbar-nav .nav-item:hover:after {
+    width: 100%;
+}
 
 /*@media(min-width: 576px) {
     .navbar-expand-sm .navbar-collapse {
@@ -92,19 +111,21 @@ body{
 .card:after {
     content: "";
     position: absolute;
-    width: 100%;
+    width:20%;
+    /*width: 100%;*/
     height: 2px;
     top: 0;
     left: 0;
     background-color: #cd2b00;
-    visibility: hidden;
-    transform: scaleX(0);
+    /*visibility: hidden;
+    transform: scaleX(0);*/
     transition: all 0.5s ease-in-out 0s;
 }
 
 .card:hover:after {
-    visibility: visible;
-    transform: scaleX(1);
+    width: 100%;
+    /*visibility: visible;
+    transform: scaleX(1);*/
 }
   
 
@@ -144,7 +165,6 @@ body{
 .bootstrap-selectpicker {
     border-radius: 0px;
     background-color: white;
-    border-color: ;
 }
 
 .bootstrap-selectpicker:focus {
