--- a/OpenLook/app/templates/search.html
+++ b/OpenLook/app/templates/search.html
@@ -29,8 +29,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <label for="group-by">Raggruppa per <em>(opzionale)</em></label>
-                    <select name= "grouping" class="custom-select" id="group-by">
-                        <option value="" selected >Scegli un'opzione...</option>
+                    <select name= "grouping" class="selectpicker" id="group-by" title="Scegli un'opzione" >
                         <!-- option value must match schema in SolR -->
                         <option value="creator_db_map" >Autore</option>
                         <option value="collection_db_map" >Collezione</option>
