--- a/OpenLook/app/templates/search.html
+++ b/OpenLook/app/templates/search.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-2">
                 <select name="filter_f" class="selectpicker">
-                    <option value="" selected >Filtra</option>
+                    <option value="" selected >Cerca in</option>
                     <option value="creator_str">Autore</option>
                     <option value="collection_ss">Collezione</option>
                     <option value="id">Id</option>
